Add `--add-opens` JVM args to test runners (#152)
https://docs.gradle.org/7.5/userguide/upgrading_version_7.html#removes_implicit_add_opens_for_test_workers